[workspace]
members = ["crates/*"]
exclude = ["crates/tort_shaders"]

[workspace.package]
authors = ["Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@outlook.de>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ProjectKML/tort"
rust-version = "1.67.1"
version = "0.1.0"

[workspace.dependencies]
tort_app = { path = "crates/tort_app", version = "0.1.0" }
tort_asset = { path = "crates/tort_asset", version = "0.1.0" }
tort_asset_builder = { path = "crates/tort_asset_builder", version = "0.1.0" }
tort_core = { path = "crates/tort_core", version = "0.1.0" }
tort_diagnostic = { path = "crates/tort_diagnostic", version = "0.1.0" }
tort_ecs = { path = "crates/tort_ecs", version = "0.1.0" }
tort_input = { path = "crates/tort_input", version = "0.1.0" }
tort_log = { path = "crates/tort_log", version = "0.1.0" }
tort_math = { path = "crates/tort_math", version = "0.1.0" }
tort_reflect = { path = "crates/tort_reflect", version = "0.1.0" }
tort_render = { path = "crates/tort_render", version = "0.1.0" }
tort_render_types = { path = "crates/tort_render_types", version = "0.1.0" }
tort_tasks = { path = "crates/tort_tasks", version = "0.1.0" }
tort_time = { path = "crates/tort_time", version = "0.1.0" }
tort_utils = { path = "crates/tort_utils", version = "0.1.0" }
tort_window = { path = "crates/tort_window", version = "0.1.0" }
tort_winit = { path = "crates/tort_winit", version = "0.1.0" }

anyhow = "1.0.69"
ash = { git = "https://github.com/ProjectKML/ash" }
ash-window = { git = "https://github.com/ProjectKML/ash" }
async-channel = "1.8.0"
bevy_app = { git = "https://github.com/ProjectKML/bevy" }
bevy_asset = { git = "https://github.com/ProjectKML/bevy" }
bevy_core = { git = "https://github.com/ProjectKML/bevy" }
bevy_diagnostic = { git = "https://github.com/ProjectKML/bevy" }
bevy_ecs = { git = "https://github.com/ProjectKML/bevy" }
bevy_input = { git = "https://github.com/ProjectKML/bevy" }
bevy_log = { git = "https://github.com/ProjectKML/bevy" }
bevy_math = { git = "https://github.com/ProjectKML/bevy" }
bevy_reflect = { git = "https://github.com/ProjectKML/bevy" }
bevy_tasks = { git = "https://github.com/ProjectKML/bevy" }
bevy_time = { git = "https://github.com/ProjectKML/bevy" }
bevy_utils = { git = "https://github.com/ProjectKML/bevy" }
bevy_window = { git = "https://github.com/ProjectKML/bevy" }
bevy_winit = { git = "https://github.com/ProjectKML/bevy" }
bitstream-io = "1.6.0"
bytemuck = { version = "1.13.0", features = ["derive", "extern_crate_std"] }
cc = "1.0.79"
concurrent-queue = "2.1.0"
fast-obj = { git = "https://github.com/ProjectKML/fast-obj-rs" }
libc = "0.2.139"
libmimalloc-sys = "0.1.30"
log = "0.4.17"
meshopt = { git = "https://github.com/ProjectKML/meshopt-rs" }
mimalloc = { version = "0.1.34", default-features = false }
once_cell = "1.17.1"
ordered-float = "3.4.0"
parking_lot = "0.12.1"
pathdiff = "0.2.1"
printf-compat = "0.1.1"
raw-window-handle = "0.5.0"
regex = "1.7.1"
rspirv-reflect = { git = "https://github.com/ProjectKML/rspirv-reflect" }
shaderc = "0.8.2"
smallvec = "1.10.0"
spirv-builder = { git = "https://github.com/beastle9end/rust-gpu", branch = "ext-mesh-shader" }
spirv-std = { git = "https://github.com/beastle9end/rust-gpu", branch = "ext-mesh-shader", features = ["glam"] }
thiserror = "1.0.38"
uuid = "1.3.0"
vk-mem-alloc = { git = "https://github.com/ProjectKML/vk-mem-alloc-rs" }
walkdir = "2.3.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3