[package]
name = "tort_a11y"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "../../LICENSE",
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
bevy_a11y.workspace = true