[package]
name = "tort_asset"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "../../LICENSE",
    "**/*.rs",
    "Cargo.toml"
]

[features]
default = ["bevy_asset/filesystem_watcher"]

[dependencies]
bevy_asset.workspace = true