[package]
name = "tort_asset_builder"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "../../LICENSE",
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
anyhow.workspace = true
bitstream-io.workspace = true
bytemuck.workspace = true
fast-obj.workspace = true
meshopt.workspace = true
tort_math.workspace = true