[package]
name = "tort_ecs"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "../../LICENSE",
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
bevy_ecs.workspace = true