[package]
name = "tort_math"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "../../LICENSE",
    "**/*.rs",
    "Cargo.toml"
]

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std.workspace = true

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
bevy_math.workspace = true