[package]
name = "tort_render"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "../../LICENSE",
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
anyhow.workspace = true
ash.workspace = true
ash-window.workspace = true
tort_ecs.workspace = true
tort_window.workspace = true
libc.workspace = true
log.workspace = true
raw-window-handle.workspace = true
thiserror.workspace = true
vk-mem-alloc.workspace = true

[build-dependencies]
spirv-builder.workspace = true