[package]
name = "tort_shaders"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std.workspace = true
tort_math.workspace = true
