[package]
name = "tort_shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/beastle9end/rust-gpu", branch = "ext-mesh-shader", features = ["glam"] }
tort_math = { path = "../tort_math" }
tort_render_types = { path = "../tort_render_types" }