[package]
name = "tort_time"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "../../LICENSE",
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
bevy_time.workspace = true