[package]
name = "tort_utils"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "../../LICENSE",
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
bevy_utils.workspace = true
bytemuck.workspace = true
ordered-float.workspace = true
smallvec.workspace = true
uuid.workspace = true